--- a/public/themes/admin_simpleboot3/portal/admin_article/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_article/add.html
@@ -53,6 +53,12 @@
                         </td>
                     </tr>
                     <tr>
+                        <th>语言</th>
+                        <td>
+                            <input class="form-control" type="text" name="post[language]" id="language" required value=""/>
+                        </td>
+                    </tr>
+                    <tr>
                         <th width="100">所属专辑</th>
                         <td>
                             <select class="form-control" name="post[album_id]" id="input-parent">
