--- a/public/themes/admin_simpleboot3/portal/admin_ramble/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_ramble/add.html
@@ -65,6 +65,22 @@
                             <script type="text/plain" id="content" name="details"></script>
                         </td>
                     </tr>
+                    <tr>
+                        <th>图片</th>
+                        <td>
+                            <div>
+                                <input type="hidden" name="img" class="form-control"
+                                       id="js-thumbnail-input">
+                                <div>
+                                    <a href="javascript:uploadOneImage('图片上传','#js-thumbnail-input');">
+                                        <img src="__TMPL__/public/assets/images/default-thumbnail.png"
+                                             id="js-thumbnail-input-preview"
+                                             width="135" style="cursor: pointer"/>
+                                    </a>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
                 </table>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
