--- a/public/themes/admin_simpleboot3/portal/admin_story/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_story/add.html
@@ -29,64 +29,32 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:url('AdminRamble/index')}">漫谈管理</a></li>
-        <li class="active"><a href="{:url('AdminRamble/add')}">添加漫谈</a></li>
+        <li><a href="{:url('AdminStory/index')}">史话管理</a></li>
+        <li class="active"><a href="{:url('AdminStory/add')}">添加史话</a></li>
     </ul>
-    <form action="{:url('AdminRamble/editPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
-        <input type="hidden" value="{$post.id}" name="id">
+    <form action="{:url('AdminStory/addPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
         <div class="row">
             <div class="col-md-9">
                 <table class="table table-bordered">
-                    <tr>
-                        <th width="100">分类<span class="form-required">*</span></th>
-                        <td>
-                            <select class="form-control" name="cate" id="input-parent">
-                                <foreach name="cate" item="vo">
-                                    <option value="{$vo.cate_id}">{$vo.name}</option>
-                                </foreach>
-                            </select>
-                        </td>
-                    </tr>
+
                     <tr>
                         <th>标题<span class="form-required">*</span></th>
                         <td>
                             <input class="form-control" type="text" name="title"
-                                   id="title" required value="{$post.title}" placeholder="请输入标题" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>概要<span class="form-required">*</span></th>
-                        <td>
-                            <textarea name="outline" style="width: 850px">{$post.outline}</textarea>
+                                   id="title" required value="" placeholder="请输入标题"/>
                         </td>
                     </tr>
                     <tr>
                         <th>内容</th>
                         <td>
-                            <script type="text/plain" id="content" name="details">{:htmlspecialchars_decode($post['details'])}</script>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>图片</th>
-                        <td>
-                            <div>
-                                <input type="hidden" name="img" class="form-control"
-                                       id="js-thumbnail-input" value="{$post.img}">
-                                <div>
-                                    <a href="javascript:uploadOneImage('图片上传','#js-thumbnail-input');">
-                                        <img src="__TMPL__/public/assets/images/default-thumbnail.png"
-                                             id="js-thumbnail-input-preview"
-                                             width="135" style="cursor: pointer"/>
-                                    </a>
-                                </div>
-                            </div>
+                            <script type="text/plain" id="content" name="content"></script>
                         </td>
                     </tr>
                 </table>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary js-ajax-submit">{:lang('ADD')}</button>
-                        <a class="btn btn-default" href="{:url('AdminRamble/index')}">{:lang('BACK')}</a>
+                        <a class="btn btn-default" href="{:url('AdminStory/index')}">{:lang('BACK')}</a>
                     </div>
                 </div>
             </div>
